# embedded-debug

./: .dockerignore  Dockerfile  README.md  buildrun.sh  exec.sh  zybo_gdb.script
app/: CMakeLists.txt
app/cmake/: cross_compile.cmake
app/src/: hello.c  uart.c
gdb/: zybo-app.script  zybo.script
ocdconfig/: zybo-debug.cfg  zybo-main.cfg  zyboz7020.cfg
scripts/: flash.sh  gdb.sh  telnet.sh  tioze.sh
